fix: possible z-index issue with mobile menu toggle

--- a/modules/header/assets/styles/header.scss
+++ b/modules/header/assets/styles/header.scss
@@ -90,6 +90,7 @@
       position: absolute;
       top: var(--spacing-m);
       right: var(--spacing-m);
+      z-index: 5;
     }
   }
   &__overlay {
